# RecipeImporter

./: .gitignore  AGENTS.md  IMPORTANT CONVENTIONS.md  Makefile  README.md  analyze_activity.py  analyze_all_activity.py  analyze_leaks.py  cookimport.json  crqt3smvsohidma6ipdpq7fbdijhllv5  eahnlfplp2h2admmiimhei9jvp0pbgat.darc  eslint.config.mjs  fkuqdapkqscugeulvc5dl3fimca0lts8.darc  idj3tgakjiopbmfivfcrr7tnbikri9ju.darc  manifest  map_tokens.py  package-lock.json  package.json  pyproject.toml  pytest.ini  tmp_select.json
.beads/: metadata.json
.history/: .gitignore  README.md  last_run_settings_benchmark.json  performance_history.csv  qualitysuite_winner_run_settings.json
.tmp/: speed_suite.json
cookimport/: AGENTS.md  CONVENTIONS.md  README.md  __init__.py  c3imp_entrypoint.py  c4imp_entrypoint.py  cf_debug_cli.py  cli.py  cli_support.py  cli_worker.py  entrypoint.py  epub_extractor_names.py  paths.py
cookimport.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: 2026-02-01_235255_importer-docs-summary.md  2026-02-11_19.19.57_recipeimport-docs-summary.md  2026-02-12_10.25.15_recipeimport-docs-summary.md  2026-02-15_23.57.32_recipeimport-docs-summary.md  2026-02-16_11.42.04_recipeimport-docs-summary.md  2026-02-22_11.22.38_recipeimport-docs-summary.md  2026-02-22_14.21.10_recipeimport-docs-summary.md  2026-02-22_19.41.09_recipeimport-docs-summary.md  2026-02-23_13.40.47_recipeimport-docs-summary.md  2026-02-24_22.47.11_recipeimport-docs-summary.md  2026-02-25_16.47.18_recipeimport-docs-summary.md  2026-02-25_19.18.38_recipeimport-docs-summary.md  2026-02-26_21.52.26-all-method-timeouts-canonical-alignment-mismatch.md  2026-02-27_19.53.41-all-agents.md  2026-04-14_beads-shared-server-setup.md  AGENTS.md  AI_Context.md  AI_Summary.md  AI_context.md  CRAZY_LIST.md  I4.1-Auto-tag.md  IMPORTANT CONVENTIONS.md  IMPORTER THOUGHTS.md  Import engine OVERALL PLAN.md  Improving_Recipe_Import_Pipeline.md  Improving_Recipe_Import_Pipeline2.md  Label_Studio_Benchmarking.md  PLANS.md  README.md  THE_PERFECT_COMMIT.md  Tip_Evaluation_Harness.md  Tip_Parsing_Tuning_Guide.md  bench-runbook.md  brief update.md  build-docs-summary.sh  docs-list.md  docs-list.ts  docs-summary-script.md  flatten-folders.sh  git.md  (+4 more)
llm_pipelines/: README.md
scripts/: README.md  bench_sequence_matcher_impl.py  benchmark_cutdown_for_external_ai.py  dev-clean.sh  fake-codex-farm.py  interactive-with-codex-farm.sh  markitdown_epub_smoke.py  migrate_pulled_labelstudio_gold_to_source_rows.py  quality_top_tier_tournament.py  replay_seaandsmoke_codex_transport.py  sync_cookbook_tag_catalog.py  test-suite.sh  upload_row_gold_seed_projects_to_labelstudio.py  with-codex-farm.sh
tests/: AGENTS.md  CONVENTIONS.md  README.md  __init__.py  conftest.py  fast_stage_pipeline.py  nonrecipe_stage_helpers.py  paths.py  test_bench.py  test_c3imp_interactive_menu.py  test_chunks.py  test_cleaning_epub.py  test_cli_limits.py  test_cli_llm_flags.py  test_cli_output_structure.py  test_codex_farm_contracts.py  test_codex_farm_orchestrator.py  test_draft_v1_lowercase.py  test_draft_v1_staging_alignment.py  test_draft_v1_variants.py  test_epub_auto_select.py  test_epub_debug_cli.py  test_epub_debug_extract_cli.py  test_epub_html_normalize.py  test_epub_importer.py  test_eval_freeform_practical_metrics.py  test_excel_importer.py  test_extraction_quality.py  test_ingredient_parser.py  test_instruction_parser.py  test_knowledge_job_bundles.py  test_knowledge_output_ingest.py  test_knowledge_writer.py  test_labelstudio_benchmark_helpers.py  test_labelstudio_export.py  test_labelstudio_freeform.py  test_labelstudio_import_naming.py  test_labelstudio_ingest_parallel.py  test_labelstudio_prelabel.py  test_llm_pipeline_pack.py  (+22 more)
tmp_dash2/: index.html
(+5163 files in other folders)
