[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cookimport"
version = "0.1.0"
description = "Local CLI for importing recipe sources into staging JSON-LD."
readme = "cookimport/README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12",
  "ebooklib>=0.17",
  "ingredient-parser-nlp>=0.1.0",
  "lxml>=5.0",
  "openpyxl>=3.1",
  "pymupdf>=1.23",
  "pydantic>=2.5,<3",
  "PyYAML>=6.0",
  "questionary>=2.0",
  "rapidfuzz>=3.0",
  "rich>=13.7",
  "typer>=0.12",
  "python-docx>=1.1.0",
  "python-doctr[torch]>=0.9",
  "unstructured>=0.18.32,<0.19",
]

[project.optional-dependencies]
db = [
  "psycopg[binary]>=3.1",
]
dev = [
  "pytest>=7.4",
  "psycopg[binary]>=3.1",
]

[project.scripts]
cookimport = "cookimport.cli:app"
import = "cookimport.entrypoint:main"
C3import = "cookimport.entrypoint:main"
C3imp = "cookimport.c3imp_entrypoint:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cookimport*"]
